--- a/TOI_headlines_dataset_analysis.ipynb
+++ b/TOI_headlines_dataset_analysis.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "name": "TOI headlines dataset.ipynb",
-      "provenance": []
+      "provenance": [],
+      "toc_visible": true
     },
     "kernelspec": {
       "name": "python3",
@@ -705,7 +706,7 @@
         "\r\n",
         "print(\"Importing packages\")"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -749,8 +750,32 @@
       "source": [
         ""
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wnQxpi6CzAHw"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ePN_flMiypFn"
+      },
+      "source": [
+        "# Business understanding \r\n",
+        "Lets take a look at the following:\r\n",
+        "1. What India read about before covid\r\n",
+        "2. Portrayal of two national parties in India\r\n",
+        "3. What are the two national parties talking about during general election"
+      ]
     },
     {
       "cell_type": "code",
@@ -770,7 +795,7 @@
         "df.head()\r\n",
         "df.shape\r\n"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -808,7 +833,7 @@
         "df['publish_date'] = pd.to_datetime(df['publish_date'].astype(str), format='%Y-%m-%d') \r\n",
         "df.info()"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -844,7 +869,7 @@
         "id": "U2PBmuSsi_AH"
       },
       "source": [
-        "# Exploratory Data Analysis"
+        "# Data understanding"
       ]
     },
     {
@@ -868,7 +893,7 @@
         "df[\"third_cat\"] = newdf[2]\r\n",
         "newdf.head()"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -979,7 +1004,7 @@
         "#display the report\r\n",
         "news_report.show_notebook()"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6235,7 +6260,7 @@
         "# we can see below there is no missing data here.\r\n",
         "# although the categories beyond category 2 start to fadeout quickly"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -12691,7 +12716,7 @@
         "id": "2rIXxcxsjNQs"
       },
       "source": [
-        "# Gather and Clean data"
+        "# Prepare data"
       ]
     },
     {
@@ -12717,7 +12742,7 @@
         "df2020 = data[data[\"year\"]>2019]\r\n",
         "# data = df.copy()"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -12733,7 +12758,7 @@
       "source": [
         "data.head()"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -12835,7 +12860,7 @@
         "df2019 = data[data[\"year\"]==2019]\r\n",
         "df2019.head()"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -12936,7 +12961,7 @@
         "# number of news articles in both the years\r\n",
         "print(df2020.shape,df2019.shape)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -12950,10 +12975,19 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "ywZQQ5MAzPs3"
+      },
+      "source": [
+        "# Data Modelling and Evaluation"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "nfd4EmKIjbfp"
       },
       "source": [
-        "# What India was reading in 2019 vs 2020 "
+        "## What India was reading in 2019 vs 2020 "
       ]
     },
     {
@@ -13033,7 +13067,7 @@
         "\r\n",
         "plot_results(total_data,total_data_bigram,total_data_trigram)\r\n"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -13054,6 +13088,15 @@
             "tags": []
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zz0b4rEezjRs"
+      },
+      "source": [
+        ""
       ]
     },
     {
@@ -13093,7 +13136,7 @@
         "plot_results(total_data,total_data_bigram,total_data_trigram)\r\n",
         "\r\n"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -13122,7 +13165,7 @@
         "id": "faaYPFkQjhzl"
       },
       "source": [
-        "# Sentiment analysis for BJP and Congress"
+        "## Sentiment analysis for BJP and Congress"
       ]
     },
     {
@@ -13144,7 +13187,7 @@
         "print(\"Congress was mentioned {} times\".format(np.sum(index_congress)))\r\n",
         "print(\"Overall BJP was mentioned {} times more than Congress\".format(np.round(np.sum(index_bjp)/np.sum(index_congress),3)))"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -13202,7 +13245,7 @@
         "cong_sent = pd.DataFrame(sentiment_category_tb )\r\n",
         "cong_vals = cong_sent.value_counts()"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -13265,7 +13308,7 @@
         "fig.tight_layout()\r\n",
         "plt.show()\r\n"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -13317,7 +13360,7 @@
         "\r\n",
         "years = np.arange(2001,2021,1)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -13337,7 +13380,7 @@
         "bmean = bmean[0].to_numpy()\r\n",
         "# print (cmean, bmean)"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -13356,7 +13399,7 @@
         "bnmean = bnmean[0].to_numpy()\r\n",
         "# print (cnmean, bnmean)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -13440,7 +13483,7 @@
         "# bnet = [a_i - b_i for a_i, b_i in zip(bpos, bneg)]\r\n",
         "# plot_sent(cnet,bnet,sent=\"Positive - Negative \")"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -13524,7 +13567,7 @@
         "corr, _ = pearsonr(bneu, cneu)\r\n",
         "print('Pearsons correlation Neutral: %.3f' % corr)"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -13583,7 +13626,7 @@
         "plt.show()\r\n",
         "#print (mpos,mneg,mneu)\r\n"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -13629,7 +13672,7 @@
         "id": "dwAP6Clgjri-"
       },
       "source": [
-        "# Top trigrams, nouns and verbs for BJP and Congress"
+        "## Top trigrams, nouns and verbs for BJP and Congress"
       ]
     },
     {
@@ -13709,7 +13752,7 @@
         "noun_bjp, verb_bjp = noun_verb(text_bjp)\r\n",
         "plot_noun_verb(bjp_trigrams,noun_bjp,verb_bjp,party=\"BJP\")"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -13766,7 +13809,7 @@
         "noun_cong, verb_cong = noun_verb(text_cong)\r\n",
         "plot_noun_verb(cong_trigrams,noun_cong,verb_cong,party=\"Congress\")"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
